--- a/khai_toan.html
+++ b/khai_toan.html
@@ -341,11 +341,11 @@
                         <input type="number" id="bridgeLength" placeholder="0.00" step="0.01">
                     </div>
                     <div class="geometric-card">
-                        <label for="roadWidth">Rộng mặt đường (B)</label>
+                        <label for="roadWidth">Rộng mặt đường (m)</label>
                         <input type="number" id="roadWidth" placeholder="0.00" step="0.01">
                     </div>
                     <div class="geometric-card">
-                        <label for="shoulderWidth">Rộng lề gia cố (C)</label>
+                        <label for="shoulderWidth">Rộng lề gia cố (m)</label>
                         <input type="number" id="shoulderWidth" placeholder="0.00" step="0.01">
                     </div>
                     <div class="geometric-card">
