- update for spending server

--- a/khai_toan.html
+++ b/khai_toan.html
@@ -632,7 +632,7 @@
                 <h2 class="section-title">Xuất Báo Cáo</h2>
                 <div class="input-group">
                     <label for="exportProjectName">Tên dự án:</label>
-                    <input type="text" id="exportProjectName" placeholder="Ví dụ: Dự án Đường 30/4 nối dài">
+                    <input type="text" id="exportProjectName" placeholder="Ví dụ: Dự án Đường LEDAT nối dài">
                 </div>
                 <button id="exportExcelBtn" class="btn btn-add" style="width: 100%; padding: 15px; font-size: 1.1em;">Xuất file Excel</button>
             </div>
