--- a/nono.html
+++ b/nono.html
@@ -286,6 +286,14 @@
             gap: 1rem;
         }
 
+        .footer {
+            text-align: center;
+            padding: 1.5rem;
+            margin-top: 1rem;
+            color: var(--text-color-secondary);
+            font-size: 0.9rem;
+        }
+
         @media (max-width: 768px) {
             body {
                 padding: 1rem;
@@ -321,6 +329,10 @@
             </div>
         </div>
     </div>
+
+    <footer class="footer">
+        <p>&copy; 2025 LEDAT. All Rights Reserved.</p>
+    </footer>
 
     <script>
         let poleCount = 0;
