--- a/nono.html
+++ b/nono.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quản lý Dữ liệu Mặt cắt - Giao diện Thông minh</title>
+    <title>Quản lý Dữ liệu Mặt cắt</title>
     <style>
         :root {
             --background-blur: 16px;
@@ -709,9 +709,8 @@
                 const blob = new Blob([content], { type: 'text/plain;charset=utf-8' });
                 const url = window.URL.createObjectURL(blob);
                 const link = document.createElement('a');
-                const activeItemName = document.querySelector('.item-list-item.active')?.textContent.replace(/[^a-z0-9]/gi, '_');
                 link.href = url;
-                link.download = `${activeItemName || 'data'}.ntd`;
+                link.download = 'LEDAT_data.ntd';
                 document.body.appendChild(link);
                 link.click();
                 document.body.removeChild(link);
