--- a/nono.html
+++ b/nono.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quản lý Dữ liệu Mặt cắt - Giao diện Thông minh</title>
+    <title>LEDAT - Quản lý Dữ liệu Mặt cắt</title>
     <style>
         :root {
             --background-blur: 20px;
@@ -624,7 +624,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Quản lý Dữ liệu Mặt cắt</h1>
+            <h1>LEDAT - Quản lý Dữ liệu Mặt cắt</h1>
             <p>Nhập, trực quan hóa và xuất dữ liệu mặt cắt sang định dạng .ntd</p>
         </div>
         
