--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class="buttons">
             <a href="tracnghiem.html" class="button">Ôn tập thi chứng chỉ</a>
             <a href="bandoso.html" class="button">Bản đồ số Vĩnh Long</a>
+            <a href="vn2000-api.html" class="button">VN2000 - Công cụ Tọa độ & Địa chính</a>
             <!-- <a href="ppl.html" class="button">Lập Phương pháp luận</a>
             <a href="gen_report.html" class="button">Tạo Báo cáo Công trình</a>
             <a href="satnhap.html" class="button">Tra cứu sáp nhập tỉnh</a>
