--- a/bandoso.html
+++ b/bandoso.html
@@ -27,12 +27,21 @@
       <button id="locate-btn" class="locate-btn-custom">📍 Xác định vị trí của bạn</button>
       <button id="measure-btn" class="measure-btn-custom">📏 Đo khoảng cách</button>
       <button id="clear-measure-btn" class="clear-measure-btn-custom" style="display: none;">🗑️ Xóa đo</button>
+      <button id="area-btn" class="area-btn-custom">📐 Đo diện tích</button>
+      <button id="clear-area-btn" class="clear-area-btn-custom" style="display: none;">🗑️ Xóa vùng</button>
       <button id="fullscreen-btn" class="fullscreen-btn-custom">⛶ Toàn màn hình</button>
     </div>
     <div id="measure-info" class="measure-info" style="display: none;">
       <div class="measure-info-content">
         <span id="measure-distance">Tổng khoảng cách: 0 m</span>
         <span id="measure-points">Số điểm: 0</span>
+      </div>
+    </div>
+    <div id="area-info" class="area-info" style="display: none;">
+      <div class="area-info-content">
+        <span id="area-value">Diện tích: 0 km²</span>
+        <span id="area-hectares">(0 ha)</span>
+        <span id="area-points">Số điểm: 0</span>
       </div>
     </div>
     <div style="display: flex; justify-content: center; align-items: center; gap: 18px; margin-top: 32px; margin-bottom: 0;">
