- update xác định vị trí real time

--- a/bandoso.html
+++ b/bandoso.html
@@ -24,7 +24,7 @@
     </div>
     <div id="map"></div>
     <div style="display: flex; justify-content: center; gap: 12px; margin: 24px 0 0 0; flex-wrap: wrap;">
-      <button id="locate-btn" class="locate-btn-custom">📍 Xác định vị trí của bạn</button>
+      <button id="locate-btn" class="locate-btn-custom">📍 Xác định vị trí</button>
       <button id="measure-btn" class="measure-btn-custom">📏 Đo khoảng cách</button>
       <button id="clear-measure-btn" class="clear-measure-btn-custom" style="display: none;">🗑️ Xóa đo</button>
       <button id="area-btn" class="area-btn-custom">📐 Đo diện tích</button>
