--- a/bandoso.html
+++ b/bandoso.html
@@ -10,20 +10,30 @@
 </head>
 <body>
   <div class="container">
+    <!-- Khối overlay trên bản đồ: logo + tiêu đề + tìm kiếm -->
     <header>
-      <img src="logo/AULAC_CONS.png" alt="AULAC Logo" style="height:120px; display:block; margin:0 auto 8px auto;">
-      <h1>Bản đồ số Âu Lạc</h1>
-      <p class="subtitle">Tương tác để xem thông tin từng xã/phường</p>
+      <div class="brand">
+        <img src="logo/AULAC_CONS.png" alt="AULAC Logo" class="brand-logo">
+        <div class="brand-text">
+          <h1>Bản đồ số Âu Lạc</h1>
+          <p class="subtitle">Khám phá dữ liệu không gian từng xã/phường</p>
+        </div>
+      </div>
     </header>
-    <div class="search-bar-modern" style="display: flex; justify-content: center; align-items: center; margin-bottom: 18px; margin-top: 8px; gap: 8px;">
+
+    <div class="search-bar-modern">
       <input id="search-input" class="search-input-modern" type="text" placeholder="Nhập tên xã/phường...">
       <button id="search-btn" class="search-btn-modern">
         <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align: middle; margin-right: 4px;"><circle cx="9" cy="9" r="7" stroke="currentColor" stroke-width="2"/><line x1="14.4142" y1="14" x2="18" y2="17.5858" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
         <span>Tìm kiếm</span>
       </button>
     </div>
+
+    <!-- Bản đồ chiếm trọn màn hình -->
     <div id="map"></div>
-    <div style="display: flex; justify-content: center; gap: 12px; margin: 24px 0 0 0; flex-wrap: wrap;">
+
+    <!-- Thanh công cụ nổi trên bản đồ -->
+    <div class="map-tools-bar">
       <button id="locate-btn" class="locate-btn-custom">📍 Xác định vị trí</button>
       <button id="measure-btn" class="measure-btn-custom">📏 Đo khoảng cách</button>
       <button id="clear-measure-btn" class="clear-measure-btn-custom" style="display: none;">🗑️ Xóa đo</button>
@@ -44,14 +54,31 @@
         <span id="area-points">Số điểm: 0</span>
       </div>
     </div>
-    <div style="display: flex; justify-content: center; align-items: center; gap: 18px; margin-top: 32px; margin-bottom: 0;">
-      <span style="font-size: 0.98em; color: #444; background: rgba(0,0,0,0.04); border-radius: 18px; padding: 4px 14px; font-weight: 500;">Được phát triển bởi LEDAT 😎</span>
-      <span style="height: 24px; width: 1.5px; background: #e0e0e0; display: inline-block; border-radius: 2px;"></span>
-      <a href="https://www.facebook.com/harry.twenty3/" target="_blank" style="display: flex; align-items: center; gap: 6px; background: rgba(24,119,242,0.08); border-radius: 18px; padding: 4px 14px; font-size: 0.98em; color: #1877f2; text-decoration: none; font-weight: 500; transition: background 0.2s;">
-          <svg width="20" height="20" viewBox="0 0 32 32" fill="currentColor" style="margin-right: 4px;"><path d="M29 0h-26c-1.7 0-3 1.3-3 3v26c0 1.7 1.3 3 3 3h13v-12h-4v-5h4v-3.6c0-4.1 2.5-6.4 6.2-6.4 1.8 0 3.6.3 3.6.3v4h-2c-2 0-2.6 1.2-2.6 2.5v3.2h5l-1 5h-4v12h7c1.7 0 3-1.3 3-3v-26c0-1.7-1.3-3-3-3z"/></svg>
-          <span>Facebook: <b>harry.twenty3</b></span>
+
+    <!-- Panel thông tin xã/phường trượt từ bên phải -->
+    <aside id="info-panel" class="info-panel">
+      <div class="info-panel-header">
+        <div>
+          <div class="info-panel-label">XÃ/PHƯỜNG</div>
+          <h2 id="info-panel-title" class="info-panel-title">Thông tin khu vực</h2>
+        </div>
+        <button id="info-panel-close" class="info-panel-close-btn" title="Đóng">
+          ×
+        </button>
+      </div>
+      <div id="info-panel-body" class="info-panel-body">
+        <!-- Nội dung sẽ được JS điền khi người dùng chọn xã/phường -->
+      </div>
+    </aside>
+
+    <!-- Footer nhỏ, nổi trên bản đồ -->
+    <div class="map-footer">
+      <span class="map-footer-badge">Được phát triển bởi LEDAT</span>
+      <a href="https://www.facebook.com/harry.twenty3/" target="_blank" class="map-footer-link">
+        <svg width="18" height="18" viewBox="0 0 32 32" fill="currentColor"><path d="M29 0h-26c-1.7 0-3 1.3-3 3v26c0 1.7 1.3 3 3 3h13v-12h-4v-5h4v-3.6c0-4.1 2.5-6.4 6.2-6.4 1.8 0 3.6.3 3.6.3v4h-2c-2 0-2.6 1.2-2.6 2.5v3.2h5l-1 5h-4v12h7c1.7 0 3-1.3 3-3v-26c0-1.7-1.3-3-3-3z"/></svg>
+        <span>Facebook: <b>harry.twenty3</b></span>
       </a>
-  </div>
+    </div>
   </div>
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="js/bandoso.js"></script>
