- update source code

--- a/bandoso.html
+++ b/bandoso.html
@@ -2,6 +2,7 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
   <title>Bản đồ số Vĩnh Long - AULAC</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
   <link rel="stylesheet" href="css/bandoso.css"/>
@@ -39,7 +40,6 @@
       <button id="clear-measure-btn" class="clear-measure-btn-custom" style="display: none;">🗑️ Xóa đo</button>
       <button id="area-btn" class="area-btn-custom">📐 Đo diện tích</button>
       <button id="clear-area-btn" class="clear-area-btn-custom" style="display: none;">🗑️ Xóa vùng</button>
-      <button id="fullscreen-btn" class="fullscreen-btn-custom">⛶ Toàn màn hình</button>
     </div>
     <div id="measure-info" class="measure-info" style="display: none;">
       <div class="measure-info-content">
