--- a/bandoso.html
+++ b/bandoso.html
@@ -93,7 +93,12 @@
           <div class="settings-section">
             <div class="settings-section-title">Ranh giới xã/phường</div>
             <button id="toggle-overlay-btn-custom" class="toggle-overlay-btn-custom">
-              <span class="toggle-icon">👁️</span>
+              <span class="toggle-icon">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                  <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+                  <circle cx="12" cy="12" r="3"></circle>
+                </svg>
+              </span>
               <span class="toggle-text">Hiển thị ranh giới</span>
             </button>
           </div>
