--- a/bandoso.html
+++ b/bandoso.html
@@ -11,19 +11,40 @@
 </head>
 <body>
   <div class="container">
-    <!-- Khối overlay trên bản đồ: logo + tiêu đề + tìm kiếm -->
-    <header>
-      <div class="brand">
-        <img src="logo/AULAC_CONS.png" alt="AULAC Logo" class="brand-logo">
-        <div class="brand-text">
-          <h1>Bản đồ số Âu Lạc</h1>
-          <p class="subtitle">Khám phá dữ liệu không gian từng xã/phường</p>
-        </div>
-      </div>
-    </header>
-
     <!-- Bản đồ chiếm trọn màn hình -->
     <div id="map"></div>
+
+    <!-- Nút toggle thông tin -->
+    <button id="info-toggle-btn" class="info-toggle-btn" title="Hiển thị thông tin">
+      <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <circle cx="12" cy="12" r="10"></circle>
+        <line x1="12" y1="16" x2="12" y2="12"></line>
+        <line x1="12" y1="8" x2="12.01" y2="8"></line>
+      </svg>
+    </button>
+
+    <!-- Khối thông tin có thể ẩn/hiện -->
+    <div id="info-card" class="info-card">
+      <button id="info-card-close" class="info-card-close-btn" title="Ẩn thông tin">
+        ×
+      </button>
+      <div class="info-card-content">
+        <div class="brand">
+          <img src="logo/AULAC_CONS.png" alt="AULAC Logo" class="brand-logo">
+          <div class="brand-text">
+            <h1>Bản đồ số Âu Lạc</h1>
+            <p class="subtitle">Khám phá dữ liệu không gian từng xã/phường</p>
+          </div>
+        </div>
+        <div class="info-card-footer">
+          <span class="info-footer-badge">Được phát triển bởi LEDAT</span>
+          <a href="https://www.facebook.com/harry.twenty3/" target="_blank" class="info-footer-link">
+            <svg width="18" height="18" viewBox="0 0 32 32" fill="currentColor"><path d="M29 0h-26c-1.7 0-3 1.3-3 3v26c0 1.7 1.3 3 3 3h13v-12h-4v-5h4v-3.6c0-4.1 2.5-6.4 6.2-6.4 1.8 0 3.6.3 3.6.3v4h-2c-2 0-2.6 1.2-2.6 2.5v3.2h5l-1 5h-4v12h7c1.7 0 3-1.3 3-3v-26c0-1.7-1.3-3-3-3z"/></svg>
+            <span>Facebook: <b>harry.twenty3</b></span>
+          </a>
+        </div>
+      </div>
+    </div>
 
     <!-- Nút toggle hộp công cụ -->
     <button id="tools-toggle-btn" class="tools-toggle-btn" title="Mở công cụ">
@@ -113,6 +134,14 @@
               </div>
             </div>
           </div>
+
+          <!-- Quản lý dự án -->
+          <div class="settings-section">
+            <div class="settings-section-title">Các Dự án</div>
+            <div id="duan-files-container" class="duan-files-container">
+              <!-- Các file sẽ được thêm động bằng JavaScript -->
+            </div>
+          </div>
         </div>
       </div>
     </aside>
@@ -146,14 +175,6 @@
       </div>
     </aside>
 
-    <!-- Footer nhỏ, nổi trên bản đồ -->
-    <div class="map-footer">
-      <span class="map-footer-badge">Được phát triển bởi LEDAT</span>
-      <a href="https://www.facebook.com/harry.twenty3/" target="_blank" class="map-footer-link">
-        <svg width="18" height="18" viewBox="0 0 32 32" fill="currentColor"><path d="M29 0h-26c-1.7 0-3 1.3-3 3v26c0 1.7 1.3 3 3 3h13v-12h-4v-5h4v-3.6c0-4.1 2.5-6.4 6.2-6.4 1.8 0 3.6.3 3.6.3v4h-2c-2 0-2.6 1.2-2.6 2.5v3.2h5l-1 5h-4v12h7c1.7 0 3-1.3 3-3v-26c0-1.7-1.3-3-3-3z"/></svg>
-        <span>Facebook: <b>harry.twenty3</b></span>
-      </a>
-    </div>
   </div>
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="js/bandoso.js"></script>
