--- a/bandoso.html
+++ b/bandoso.html
@@ -25,18 +25,12 @@
 
     <!-- Khối thông tin có thể ẩn/hiện -->
     <div id="info-card" class="info-card">
-      <button id="info-card-close" class="info-card-close-btn" title="Ẩn thông tin">
-        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-          <line x1="18" y1="6" x2="6" y2="18"></line>
-          <line x1="6" y1="6" x2="18" y2="18"></line>
-        </svg>
-      </button>
       <div class="info-card-content">
         <div class="brand">
           <img src="logo/AULAC_CONS.png" alt="AULAC Logo" class="brand-logo">
           <div class="brand-text">
-            <h1>Bản đồ số Âu Lạc</h1>
-            <p class="subtitle">Khám phá dữ liệu không gian từng xã/phường</p>
+            <h1>BẢN ĐỒ SỐ ÂU LẠC</h1>
+            <p class="subtitle">Ấp Vĩnh Hưng, Phường Long Đức, Tỉnh Vĩnh Long</p>
           </div>
         </div>
         <div class="info-card-footer">
