--- a/bandoso.html
+++ b/bandoso.html
@@ -92,7 +92,7 @@
           <!-- Thanh tìm kiếm -->
           <div class="search-bar-modern">
             <div class="search-input-wrapper">
-              <input id="search-input" class="search-input-modern" type="text" placeholder="Nhập tên xã/phường hoặc tên đường..." autocomplete="off">
+              <input id="search-input" class="search-input-modern" type="text" placeholder="Nhập tên xã/phường, tên đường hoặc tọa độ (lat, lng)..." autocomplete="off">
               <div id="search-suggestions" class="search-suggestions"></div>
             </div>
             <button id="search-btn" class="search-btn-modern">
