--- a/bandoso.html
+++ b/bandoso.html
@@ -136,10 +136,13 @@
               <div class="tool-group-content">
                 <button id="measure-btn" class="tool-btn measure-btn-custom" title="Đo khoảng cách giữa các điểm">
                   <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <line x1="3" y1="3" x2="21" y2="21"></line>
-                    <path d="M9 9l3 3-3 3"></path>
-                    <path d="M15 15l-3-3 3-3"></path>
-                    <line x1="21" y1="3" x2="3" y2="21"></line>
+                    <line x1="5" y1="12" x2="19" y2="12"></line>
+                    <circle cx="5" cy="12" r="2"></circle>
+                    <circle cx="19" cy="12" r="2"></circle>
+                    <line x1="3" y1="6" x2="7" y2="6"></line>
+                    <line x1="3" y1="8" x2="7" y2="8"></line>
+                    <line x1="17" y1="6" x2="21" y2="6"></line>
+                    <line x1="17" y1="8" x2="21" y2="8"></line>
                   </svg>
                   <span>Đo khoảng cách</span>
                 </button>
@@ -154,7 +157,9 @@
                 </button>
                 <button id="area-btn" class="tool-btn area-btn-custom" title="Đo diện tích vùng">
                   <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <polygon points="3 11 22 2 13 21 11 13 3 11"></polygon>
+                    <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
+                    <line x1="9" y1="3" x2="9" y2="21"></line>
+                    <line x1="3" y1="9" x2="21" y2="9"></line>
                   </svg>
                   <span>Đo diện tích</span>
                 </button>
