--- a/bandoso.html
+++ b/bandoso.html
@@ -127,6 +127,25 @@
                   </svg>
                   <span>Sao chép tọa độ</span>
                 </button>
+                <div class="coordinate-system-selector">
+                  <label class="coordinate-system-label">
+                    <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                      <circle cx="12" cy="12" r="10"></circle>
+                      <line x1="2" y1="12" x2="22" y2="12"></line>
+                      <path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path>
+                    </svg>
+                    Hệ tọa độ
+                  </label>
+                  <div class="coordinate-system-select-wrapper">
+                    <select id="coordinate-system-select" class="coordinate-system-select">
+                      <option value="WGS84">🌍 WGS84 (lat, lng)</option>
+                      <option value="VN2000">📍 VN2000 (x, y)</option>
+                    </select>
+                    <svg class="coordinate-system-select-arrow" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                      <polyline points="6 9 12 15 18 9"></polyline>
+                    </svg>
+                  </div>
+                </div>
               </div>
             </div>
 
